<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/update"
        android:enabled="true"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_item1"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/cities"
        android:enabled="true"
        android:icon="@drawable/ic_cities"
        android:title="@string/menu_item2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/share"
        android:enabled="true"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_item5"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/settings"
        android:title="@string/menu_item3"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    </menu>