<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/day_gradient"
    tools:context="com.lebelle.azure.controllers.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="8dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >


            <TextView
                android:id="@+id/date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                tools:text="Today, May 18 2017" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/weather_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="100sp"
            tools:text="@string/weather_sunny" />

        <TextView
            android:id="@+id/weather_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_below="@id/weather_image2"
            tools:text="Clear throughout the day" />

        <TextView
            android:id="@+id/weather_temp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:drawableLeft="@drawable/ttemperature"
            android:drawableStart="@drawable/ttemperature"
            android:drawablePadding="5dp"
            tools:text="32&#176;C" />

        <TextView
            android:id="@+id/weather_temp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/weather_temp2"
            android:layout_alignStart="@+id/weather_temp2"
            android:layout_below="@+id/weather_temp2"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            tools:text="32&#176;C" />


        <TextView
            android:id="@+id/weather_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_below="@+id/weather_text2"
            android:layout_margin="5dp"
            android:gravity="start"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:text="@string/weather_indices_for_the_day" />

        <TextView
            android:id="@+id/pressure"
            android:layout_below="@+id/weather_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/Pressure"
            android:drawableLeft="@drawable/weatherglass_barometer"
            android:drawableStart="@drawable/weatherglass_barometer"
            android:drawablePadding="5dp"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pressure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pressure"
            android:layout_alignBottom="@+id/pressure"
            android:layout_alignLeft="@+id/precipitation_text"
            android:layout_alignStart="@+id/precipitation_text"
            tools:text="@string/Pressure_sample"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/precipitation"
            android:layout_below="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/precip_type"
            android:drawableLeft="@drawable/precip_icon"
            android:drawableStart="@drawable/precip_icon"
            android:drawablePadding="5dp"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/precipitation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/precipitation"
            android:layout_alignBottom="@+id/precipitation"
            android:layout_alignLeft="@+id/wind_speed_text"
            android:layout_alignStart="@+id/wind_speed_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="@string/Precip_sample" />


        <TextView
            android:id="@+id/humidity"
            android:layout_below="@+id/precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/humidity"
            android:drawableLeft="@drawable/drop"
            android:drawableStart="@drawable/drop"
            android:drawablePadding="5dp"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humidity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/humidity"
            android:layout_alignBottom="@+id/humidity"
            android:layout_centerHorizontal="true"
            tools:text="@string/Precip_sample"
            android:textColor="@android:color/white"
            android:textSize="18sp" />



        <TextView
            android:id="@+id/wind_speed"
            android:layout_below="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/wind_speed"
            android:drawableLeft="@drawable/wind_rose"
            android:drawableStart="@drawable/wind_rose"
            android:drawablePadding="5dp"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wind_speed"
            android:layout_alignBottom="@+id/wind_speed"
            android:layout_toEndOf="@+id/wind_direction"
            android:layout_toRightOf="@+id/wind_direction"
            tools:text="@string/wind_speed_sample"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind_direction"
            android:layout_below="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/wind_direction"
            android:drawableLeft="@drawable/wind"
            android:drawableStart="@drawable/wind"
            android:drawablePadding="5dp"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind_direction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wind_direction"
            android:layout_alignBottom="@+id/wind_direction"
            android:layout_toEndOf="@+id/humidity_text"
            android:layout_toRightOf="@+id/humidity_text"
            tools:text="@string/wind_speed_sample"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>