<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="10dp"
    android:paddingLeft="8dp"
    android:paddingRight="10dp"
    android:paddingStart="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weather_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="120sp"
            tools:text="@string/weather_sunny" />

        <TextView
            android:id="@+id/weather_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="35dp"
            android:textColor="@android:color/black"
            android:textSize="70sp"
            tools:text="32&#176;C" />
    </LinearLayout>

    <TextView
        android:id="@+id/weather_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="Clear throughout the day" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weather_date"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_calender"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Today, May 18 2017"/>

        <TextView
            android:id="@+id/weather_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_clock"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="12:00AM" />

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/ic_location"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Warri, Nigeria" />

    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        style="@style/CardTwo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/icon1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:text="@string/weather_barometer"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/pressure_number"
                        style="@style/BoxNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        tools:text="@string/number_sample" />

                </LinearLayout>

                <TextView
                    android:id="@+id/repo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Pressure"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <View style="@style/View2">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/icon2"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:text="@string/weather_speed"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/wind_speed_number"
                        style="@style/BoxNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        tools:text="@string/number_sample" />

                </LinearLayout>

                <TextView
                    android:id="@+id/followers_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/wind_speed"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <View style="@style/View2">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/icon3"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/weather_thermometer"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/temp_number"
                        style="@style/BoxNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        tools:text="@string/number_sample" />
                </LinearLayout>

                <TextView
                    android:id="@+id/temp_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/temperature"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>


            <View style="@style/View2">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/icon4"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/weather_humidity"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/humidity_number"
                        style="@style/BoxNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        tools:text="@string/number_sample" />
                </LinearLayout>

                <TextView
                    android:id="@+id/following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/humidity"
                    android:textColor="@android:color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <View style="@style/View2">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/icon5"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/weather_umbrella"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/precip_type_number"
                        style="@style/BoxNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        tools:text="@string/number_sample" />
                </LinearLayout>

                <TextView
                    android:id="@+id/wind_direction_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/precip_type"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <include
        layout="@layout/activity_main_rv">
    </include>

    </LinearLayout>

</ScrollView>